# AMq1

./: .gitignore  AprMaq1_Posibles_baselines.ipynb  Diego_Punto3_codificacion_Location_y_wind_dir.ipynb  PruebasDiego_TPFinal.ipynb  Punto3_codificacion_Location_y_wind_dir.ipynb  README.md  TP_Final_AD_WeatherAustralia.ipynb  TP_Final_AprMaq1.ipynb  TP_Final_Aprendizaje_maquinas1_new.ipynb  TP_Final_Entrenamiento_WeatherAustralia.ipynb  entrega.ipynb  pyproject.toml  reporte_minimal.html  restored.py
weather_analysis/: TP_Final_AD_WeatherAustralia.ipynb  analysis.ipynb  punto3.ipynb
