[tool.poetry]
name = "ad-tp-integrador"
version = "0.1.0"
description = "Trabajo Practico Integrado - Analisis de Datos"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ad_tp_integrador"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
scikit-learn = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
